--- a/app/src/main/res/layout/activity/layout/activity_view_post.xml
+++ b/app/src/main/res/layout/activity/layout/activity_view_post.xml
@@ -35,7 +35,6 @@
     </RelativeLayout>
     <TextView
         android:layout_below="@id/relati"
-        android:alpha="0.5"
         android:id="@+id/xian1"
         android:background="#808080"
         android:layout_width="match_parent"
@@ -89,7 +88,7 @@
                     android:layout_height="wrap_content"/>
                 <TextView
                     android:id="@+id/sign"
-                    android:textColor="@color/black"
+                    android:textColor="#808080"
                     android:text=""
                     android:layout_alignParentEnd="true"
                     android:textSize="11sp"
@@ -106,11 +105,10 @@
 
             </LinearLayout>
             <TextView
-                android:alpha="0.5"
                 android:layout_marginBottom="10dp"
                 android:layout_marginEnd="10dp"
                 android:id="@+id/text_time"
-                android:textColor="@color/black"
+                android:textColor="#808080"
                 android:textSize="14sp"
                 android:gravity="end"
                 android:layout_width="match_parent"
