--- a/app/src/main/res/layout/post/layout/create_post_layout.xml
+++ b/app/src/main/res/layout/post/layout/create_post_layout.xml
@@ -50,7 +50,7 @@
                     android:layout_height="wrap_content"/>
                 <TextView
                     android:id="@+id/sign"
-                    android:textColor="@color/black"
+                    android:textColor="#808080"
                     android:text=""
                     android:layout_alignParentEnd="true"
                     android:textSize="11sp"
