--- a/app/src/main/res/layout/window/layout/window_video_view.xml
+++ b/app/src/main/res/layout/window/layout/window_video_view.xml
@@ -1,39 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:background="@drawable/round_white"
-    android:id="@+id/linear"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#00000000"
+    android:id="@+id/relati"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <RelativeLayout
-        android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="50dp">
-        <TextView
-            android:layout_centerInParent="true"
-            android:text="播放器"
-            android:textSize="15sp"
-            android:gravity="center"
-            android:textColor="@color/black"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-        <ImageView
-            android:layout_marginEnd="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_alignParentEnd="true"
-            android:src="@drawable/return_icon"
-            android:id="@+id/return_icon"
-            android:layout_width="30dp"
-            android:layout_height="30dp"/>
-    </RelativeLayout>
-    <TextView
-        android:id="@+id/xian1"
-        android:background="#808080"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"/>
+    android:layout_height="match_parent">
     <com.google.android.exoplayer2.ui.PlayerView
-        android:layout_margin="10dp"
+        android:visibility="invisible"
         android:id="@+id/video_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-</LinearLayout>
+        android:layout_height="match_parent"
+        app:shutter_background_color="#00000000"
+        app:show_timeout="0"
+        app:hide_on_touch="false" />
+</RelativeLayout>
