--- a/app/src/main/res/layout/window/layout/window_view_img.xml
+++ b/app/src/main/res/layout/window/layout/window_view_img.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="@drawable/round_white_stroke_black"
     android:id="@+id/linear"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
     <com.github.chrisbanes.photoview.PhotoView
         android:visibility="visible"
         android:id="@+id/photoView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent"/>
 </LinearLayout>
