--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,7 +4,6 @@
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
-
     <style name="Theme.FederalSquare" parent="Base.Theme.FederalSquare" />
 
     <style name="AlertDialog_Null" parent="android:Theme.Dialog">
@@ -14,6 +13,7 @@
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:backgroundDimEnabled">false</item>
+        <item name="android:windowFrame">@null</item>
     </style>
 
     <style name="AlertDialog_Loading" parent="android:Theme.Dialog">
