--- a/app/src/main/res/layout/activity/layout/activity_view_post.xml
+++ b/app/src/main/res/layout/activity/layout/activity_view_post.xml
@@ -40,6 +40,9 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"/>
     <ScrollView
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="100dp"
         android:layout_below="@id/xian1"
         android:scrollbars="none"
         android:overScrollMode="never"
@@ -51,9 +54,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <RelativeLayout
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="5dp"
                 android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="40dp">
@@ -82,13 +82,13 @@
                     android:layout_toEndOf="@id/avatar_img"
                     android:layout_marginStart="5dp"
                     android:textSize="15sp"
-                    android:textColor="#f2f3f7"
+                    android:textColor="#000000"
                     android:text=""
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
                 <TextView
                     android:id="@+id/sign"
-                    android:textColor="#808080"
+                    android:textColor="#000000"
                     android:text=""
                     android:layout_alignParentEnd="true"
                     android:textSize="11sp"
@@ -96,8 +96,6 @@
                     android:layout_height="wrap_content"/>
             </RelativeLayout>
             <LinearLayout
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
                 android:id="@+id/linear"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
@@ -105,8 +103,8 @@
 
             </LinearLayout>
             <TextView
+                android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
-                android:layout_marginEnd="10dp"
                 android:id="@+id/text_time"
                 android:textColor="#808080"
                 android:textSize="14sp"
@@ -118,9 +116,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp" />
             <LinearLayout
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="100dp"
                 android:orientation="vertical"
                 android:id="@+id/linear_check"
                 android:layout_width="match_parent"
@@ -129,9 +124,4 @@
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
-    <com.github.chrisbanes.photoview.PhotoView
-        android:visibility="gone"
-        android:id="@+id/photoView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
 </RelativeLayout>
