--- a/app/src/main/res/layout/activity/layout/activity_view_post.xml
+++ b/app/src/main/res/layout/activity/layout/activity_view_post.xml
@@ -114,7 +114,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp" />
             <LinearLayout
-                android:layout_marginBottom="100dp"
+                android:layout_marginBottom="150dp"
                 android:orientation="vertical"
                 android:id="@+id/linear_check"
                 android:layout_width="match_parent"
@@ -123,4 +123,33 @@
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
+    <RelativeLayout
+        android:layout_alignParentBottom="true"
+        android:layout_margin="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <EditText
+            android:layout_toStartOf="@id/button_ok"
+            android:id="@+id/edit_text"
+            android:textColor="@color/black"
+            android:gravity="start"
+            android:hint="这里写评论"
+            android:maxLength="100"
+            android:textSize="15sp"
+            android:layout_margin="10dp"
+            android:background="@drawable/edit_back"
+            android:padding="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <androidx.appcompat.widget.AppCompatButton
+            android:stateListAnimator="@null"
+            android:layout_alignParentEnd="true"
+            android:id="@+id/button_ok"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:text="发布"
+            android:background="@drawable/button_event_back"
+            android:layout_width="80dp"
+            android:layout_height="52dp"/>
+    </RelativeLayout>
 </RelativeLayout>
