--- a/app/src/main/res/layout/activity/layout/activity_view_post.xml
+++ b/app/src/main/res/layout/activity/layout/activity_view_post.xml
@@ -95,6 +95,8 @@
                     android:layout_height="wrap_content"/>
             </RelativeLayout>
             <LinearLayout
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
                 android:id="@+id/linear"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
