--- a/app/src/main/res/layout/post/layout/create_post_layout.xml
+++ b/app/src/main/res/layout/post/layout/create_post_layout.xml
@@ -33,7 +33,7 @@
                     android:layout_alignParentStart="true"
                     android:id="@+id/name"
                     android:layout_centerHorizontal="true"
-                    android:textSize="15sp"
+                    android:textSize="16sp"
                     android:textColor="@color/black"
                     android:text=""
                     android:layout_width="wrap_content"
@@ -58,6 +58,7 @@
                     android:layout_height="wrap_content"/>
             </RelativeLayout>
             <LinearLayout
+                android:layout_marginBottom="10dp"
                 android:id="@+id/linear"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
@@ -67,7 +68,6 @@
         </LinearLayout>
     </LinearLayout>
     <LinearLayout
-        android:layout_marginTop="10dp"
         android:orientation="horizontal"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
