--- a/app/src/main/res/layout/activity/layout/activity_view_post.xml
+++ b/app/src/main/res/layout/activity/layout/activity_view_post.xml
@@ -67,16 +67,18 @@
                     app:rStrokeColor="#f2f3f7"
                     app:rRadius="10dp"/>
                 <TextView
+                    android:gravity="center_vertical"
                     android:layout_toEndOf="@id/avatar_img"
                     android:id="@+id/name"
                     android:layout_marginStart="5dp"
-                    android:textSize="15sp"
+                    android:textSize="16sp"
                     android:textColor="@color/black"
                     android:text=""
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="20dp"/>
                 <TextView
                     android:id="@+id/url_txt_id"
+                    android:gravity="center_vertical"
                     android:layout_alignParentBottom="true"
                     android:layout_toEndOf="@id/avatar_img"
                     android:layout_marginStart="5dp"
@@ -84,15 +86,16 @@
                     android:textColor="#000000"
                     android:text=""
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="20dp"/>
                 <TextView
                     android:id="@+id/sign"
                     android:textColor="#000000"
                     android:text=""
+                    android:gravity="end"
                     android:layout_alignParentEnd="true"
                     android:textSize="11sp"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="15dp"/>
             </RelativeLayout>
             <LinearLayout
                 android:layout_marginTop="10dp"
