--- a/app/src/main/res/layout/post/layout/create_post_layout.xml
+++ b/app/src/main/res/layout/post/layout/create_post_layout.xml
@@ -26,37 +26,45 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <RelativeLayout
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-                <TextView
-                    android:layout_alignParentStart="true"
-                    android:id="@+id/name"
-                    android:layout_centerHorizontal="true"
-                    android:textSize="16sp"
-                    android:textColor="@color/black"
-                    android:text=""
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-                <TextView
-                    android:layout_alignParentStart="true"
-                    android:layout_below="@id/name"
-                    android:id="@+id/url_txt_id"
-                    android:visibility="gone"
-                    android:textSize="15sp"
-                    android:textColor="#f2f3f7"
-                    android:text=""
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                <LinearLayout
+                    android:gravity="start"
+                    android:layout_weight="1"
+                    android:id="@+id/name_1"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:gravity="center_vertical"
+                        android:id="@+id/name"
+                        android:textSize="16sp"
+                        android:textColor="@color/black"
+                        android:text=""
+                        android:layout_width="match_parent"
+                        android:layout_height="20dp"/>
+                    <TextView
+                        android:id="@+id/url_txt_id"
+                        android:visibility="gone"
+                        android:textSize="15sp"
+                        android:textColor="#f2f3f7"
+                        android:gravity="center_vertical"
+                        android:text=""
+                        android:layout_width="match_parent"
+                        android:layout_height="20dp"/>
+                </LinearLayout>
                 <TextView
                     android:id="@+id/sign"
                     android:textColor="#808080"
                     android:text=""
-                    android:layout_alignParentEnd="true"
+                    android:gravity="end"
+                    android:layout_weight="1"
                     android:textSize="11sp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-            </RelativeLayout>
+                    android:layout_width="match_parent"
+                    android:layout_height="15dp"/>
+            </LinearLayout>
             <LinearLayout
                 android:layout_marginBottom="10dp"
                 android:id="@+id/linear"
