--- a/app/src/main/res/layout/post/layout/create_post_layout.xml
+++ b/app/src/main/res/layout/post/layout/create_post_layout.xml
@@ -39,8 +39,9 @@
                     android:layout_height="wrap_content">
                     <TextView
                         android:gravity="center_vertical"
+                        android:textStyle="bold"
                         android:id="@+id/name"
-                        android:textSize="16sp"
+                        android:textSize="15sp"
                         android:textColor="@color/black"
                         android:text=""
                         android:layout_width="match_parent"
@@ -81,6 +82,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <LinearLayout
+            android:layout_marginEnd="50dp"
             android:id="@+id/button_forward"
             android:orientation="vertical"
             android:layout_width="wrap_content"
@@ -100,7 +102,6 @@
                 android:layout_height="wrap_content"/>
         </LinearLayout>
         <LinearLayout
-            android:layout_marginStart="20dp"
             android:id="@+id/button_message"
             android:orientation="vertical"
             android:layout_width="wrap_content"
@@ -120,7 +121,7 @@
                 android:layout_height="wrap_content"/>
         </LinearLayout>
         <LinearLayout
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="50dp"
             android:id="@+id/button_collection"
             android:orientation="vertical"
             android:layout_width="wrap_content"
