--- a/app/src/main/res/layout/view/layout/view_create.xml
+++ b/app/src/main/res/layout/view/layout/view_create.xml
@@ -17,6 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <EditText
+        android:inputType="text"
         android:layout_marginTop="10dp"
         android:hint="这里写域名"
         android:id="@+id/edit_url"
@@ -37,6 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <EditText
+        android:inputType="text"
         android:layout_marginTop="10dp"
         android:hint="这里写密码"
         android:id="@+id/edit_password"
