--- a/app/src/main/res/layout/window/layout/window_personal_information_view.xml
+++ b/app/src/main/res/layout/window/layout/window_personal_information_view.xml
@@ -41,6 +41,7 @@
             android:textSize="15sp"
             android:padding="15dp"
             android:gravity="start"
+            android:inputType="text"
             android:background="@drawable/edit_back"
             android:id="@+id/edit_name"
             android:textColor="@color/black"
@@ -50,6 +51,7 @@
             android:layout_marginBottom="10dp"
             android:textSize="15sp"
             android:hint="修改签名"
+            android:inputType="text"
             android:padding="15dp"
             android:gravity="start"
             android:background="@drawable/edit_back"
