--- a/app/src/main/res/layout/window/layout/window_yinyong_list_view.xml
+++ b/app/src/main/res/layout/window/layout/window_yinyong_list_view.xml
@@ -51,6 +51,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <EditText
+                android:inputType="text"
                 android:textColor="@color/black"
                 android:textSize="15sp"
                 android:background="@drawable/edit_back"
@@ -60,6 +61,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
             <EditText
+                android:inputType="text"
                 android:layout_marginTop="10dp"
                 android:textColor="@color/black"
                 android:textSize="15sp"
