--- a/app/src/main/res/layout/item/layout/create_post_img_layout.xml
+++ b/app/src/main/res/layout/item/layout/create_post_img_layout.xml
@@ -7,14 +7,14 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    <ImageView
+    <fun.android.federal_square.view.Video_ImageView
         android:layout_gravity="bottom"
         android:scaleType="fitStart"
         android:id="@+id/img0"
         android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"/>
-    <ImageView
+    <fun.android.federal_square.view.Video_ImageView
         android:layout_gravity="bottom"
         android:scaleType="fitStart"
         android:layout_marginStart="5dp"
@@ -22,7 +22,7 @@
         android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"/>
-    <ImageView
+    <fun.android.federal_square.view.Video_ImageView
         android:layout_gravity="bottom"
         android:scaleType="fitStart"
         android:layout_marginStart="5dp"
