--- a/app/src/main/res/layout/item/layout/disk_item.xml
+++ b/app/src/main/res/layout/item/layout/disk_item.xml
@@ -2,10 +2,13 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:id="@+id/linear"
+    android:background="#00000000"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
-    <ImageView
+    <fun.android.federal_square.view.Video_ImageView
         android:id="@+id/img"
+        android:layout_gravity="center"
         android:scaleType="center"
         android:layout_width="wrap_content"
         android:layout_height="100dp"/>
