--- a/app/src/main/res/layout/item/layout/disk_item.xml
+++ b/app/src/main/res/layout/item/layout/disk_item.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:id="@+id/linear"
-    android:background="#00000000"
+    android:background="#000000"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
     <fun.android.federal_square.view.Video_ImageView
