--- a/app/src/main/res/layout/window/layout/window_post_view.xml
+++ b/app/src/main/res/layout/window/layout/window_post_view.xml
@@ -60,8 +60,25 @@
             android:layout_width="wrap_content"
             android:layout_height="50dp"/>
     </LinearLayout>
-    <EditText
+    <LinearLayout
         android:layout_below="@id/linear_bu"
+        android:id="@+id/linear_bu2"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <androidx.appcompat.widget.AppCompatButton
+            android:stateListAnimator="@null"
+            android:text="图片链接 或 视频链接"
+            android:id="@+id/add_img_or_video_url"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="5dp"
+            android:background="@drawable/button_event_back_tran"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"/>
+    </LinearLayout>
+    <EditText
+        android:layout_below="@id/linear_bu2"
         android:textColor="@color/black"
         android:maxLength="100"
         android:textSize="15sp"
