--- a/app/src/main/res/layout/item/layout/create_post_img_layout.xml
+++ b/app/src/main/res/layout/item/layout/create_post_img_layout.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#00000000"
     android:id="@+id/img_linear1"
     android:visibility="gone"
@@ -8,12 +8,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <fun.android.federal_square.view.Video_ImageView
+        android:background="@drawable/round_white_stroke_black"
         android:layout_gravity="bottom"
         android:scaleType="fitStart"
         android:id="@+id/img0"
         android:layout_weight="1"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        app:rStrokeWidth="1dp"
+        app:rStrokeColor="#f2f3f7"
+        app:rRadius="10dp"/>
     <fun.android.federal_square.view.Video_ImageView
         android:layout_gravity="bottom"
         android:scaleType="fitStart"
@@ -21,7 +25,10 @@
         android:id="@+id/img1"
         android:layout_weight="1"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        app:rStrokeWidth="1dp"
+        app:rStrokeColor="#f2f3f7"
+        app:rRadius="10dp"/>
     <fun.android.federal_square.view.Video_ImageView
         android:layout_gravity="bottom"
         android:scaleType="fitStart"
@@ -29,5 +36,8 @@
         android:id="@+id/img2"
         android:layout_weight="1"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        app:rStrokeWidth="1dp"
+        app:rStrokeColor="#f2f3f7"
+        app:rRadius="10dp"/>
 </LinearLayout>
