--- a/app/src/main/res/layout/item/layout/disk_item.xml
+++ b/app/src/main/res/layout/item/layout/disk_item.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:id="@+id/linear"
-    android:background="#000000"
+    android:background="@drawable/round_white_stroke_black"
+    android:padding="2dp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
     <fun.android.federal_square.view.Video_ImageView
         android:id="@+id/img"
+        android:scaleType="fitCenter"
         android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="100dp"/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
