--- a/app/src/main/res/layout/item/layout/create_post_img_layout_2.xml
+++ b/app/src/main/res/layout/item/layout/create_post_img_layout_2.xml
@@ -2,37 +2,32 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#00000000"
-    android:id="@+id/img_linear1"
-    android:visibility="gone"
+    android:id="@+id/img_linear"
+    android:visibility="visible"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <fun.android.federal_square.view.Video_ImageView
+        android:layout_marginTop="4dp"
+        android:scaleType="centerCrop"
         android:layout_gravity="bottom"
-        android:id="@+id/img0"
+        android:layout_marginEnd="2dp"
+        android:id="@+id/img_0"
         android:layout_weight="1"
         android:layout_width="0dp"
-        android:layout_height="100dp"
+        android:layout_height="150dp"
         app:rStrokeWidth="1dp"
         app:rStrokeColor="#f2f3f7"
         app:rRadius="10dp"/>
     <fun.android.federal_square.view.Video_ImageView
+        android:scaleType="centerCrop"
+        android:layout_marginTop="4dp"
         android:layout_gravity="bottom"
-        android:layout_marginStart="5dp"
-        android:id="@+id/img1"
+        android:layout_marginStart="2dp"
+        android:id="@+id/img_1"
         android:layout_weight="1"
         android:layout_width="0dp"
-        android:layout_height="100dp"
-        app:rStrokeWidth="1dp"
-        app:rStrokeColor="#f2f3f7"
-        app:rRadius="10dp"/>
-    <fun.android.federal_square.view.Video_ImageView
-        android:layout_gravity="bottom"
-        android:layout_marginStart="5dp"
-        android:id="@+id/img2"
-        android:layout_weight="1"
-        android:layout_width="0dp"
-        android:layout_height="100dp"
+        android:layout_height="150dp"
         app:rStrokeWidth="1dp"
         app:rStrokeColor="#f2f3f7"
         app:rRadius="10dp"/>
