--- a/app/src/main/res/layout/activity/layout/activity_view_collection.xml
+++ b/app/src/main/res/layout/activity/layout/activity_view_collection.xml
@@ -36,6 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"/>
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_below="@id/xian1"
         android:scrollbars="none"
         android:overScrollMode="never"
