--- a/app/src/main/res/layout/activity/layout/activity_view_post.xml
+++ b/app/src/main/res/layout/activity/layout/activity_view_post.xml
@@ -40,6 +40,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"/>
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_below="@id/xian1"
