--- a/app/src/main/res/layout/item/layout/create_post_img_layout_4.xml
+++ b/app/src/main/res/layout/item/layout/create_post_img_layout_4.xml
@@ -14,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <fun.android.federal_square.view.Video_ImageView
+            android:scaleType="centerCrop"
             android:layout_gravity="bottom"
             android:layout_marginEnd="2dp"
             android:id="@+id/img_0"
@@ -24,6 +25,7 @@
             app:rStrokeColor="#f2f3f7"
             app:rRadius="10dp"/>
         <fun.android.federal_square.view.Video_ImageView
+            android:scaleType="centerCrop"
             android:layout_gravity="bottom"
             android:layout_marginStart="2dp"
             android:layout_marginEnd="2dp"
@@ -35,6 +37,7 @@
             app:rStrokeColor="#f2f3f7"
             app:rRadius="10dp"/>
         <fun.android.federal_square.view.Video_ImageView
+            android:scaleType="centerCrop"
             android:layout_gravity="bottom"
             android:layout_marginStart="2dp"
             android:id="@+id/img_2"
@@ -46,6 +49,7 @@
             app:rRadius="10dp"/>
     </LinearLayout>
     <fun.android.federal_square.view.Video_ImageView
+        android:scaleType="centerCrop"
         android:layout_marginTop="4dp"
         android:id="@+id/img_3"
         android:layout_width="match_parent"
