--- a/app/src/main/res/layout/view/layout/view_square.xml
+++ b/app/src/main/res/layout/view/layout/view_square.xml
@@ -79,11 +79,20 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <LinearLayout
-                android:id="@+id/linear"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+                <LinearLayout
+                    android:id="@+id/linear"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
+                </LinearLayout>
+                <TextView
+                    android:id="@+id/di_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="70dp"/>
             </LinearLayout>
         </ScrollView>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
