--- a/app/src/main/res/layout/activity/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity/layout/activity_main.xml
@@ -19,6 +19,53 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <LinearLayout
+        android:layout_above="@id/button_menu"
+        android:id="@+id/square_menu"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="60dp">
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="5dp"
+            android:stateListAnimator="@null"
+            android:text="回到顶部"
+            android:id="@+id/button_top"
+            android:background="@drawable/button_event_back"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"/>
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:stateListAnimator="@null"
+            android:text="上一页"
+            android:id="@+id/button_up"
+            android:background="@drawable/button_event_back"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"/>
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:stateListAnimator="@null"
+            android:text="下一页"
+            android:id="@+id/button_down"
+            android:background="@drawable/button_event_back"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"/>
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="10dp"
+            android:stateListAnimator="@null"
+            android:text="刷新"
+            android:id="@+id/button_update"
+            android:background="@drawable/button_event_back"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
+    <LinearLayout
         android:visibility="gone"
         android:background="#ffffff"
         android:id="@+id/button_menu"
