--- a/app/src/main/res/layout/activity/layout/activity_view_collection.xml
+++ b/app/src/main/res/layout/activity/layout/activity_view_collection.xml
@@ -44,10 +44,67 @@
         android:layout_height="wrap_content">
         <LinearLayout
             android:orientation="vertical"
-            android:id="@+id/linear"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+            <LinearLayout
+                android:id="@+id/linear"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
+            </LinearLayout>
+            <TextView
+                android:id="@+id/di_title"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"/>
         </LinearLayout>
     </ScrollView>
+    <LinearLayout
+        android:layout_alignParentBottom="true"
+
+        android:id="@+id/square_menu"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="60dp">
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="5dp"
+            android:stateListAnimator="@null"
+            android:text="回到顶部"
+            android:id="@+id/button_top"
+            android:background="@drawable/button_event_back"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"/>
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:stateListAnimator="@null"
+            android:text="上一页"
+            android:id="@+id/button_up"
+            android:background="@drawable/button_event_back"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"/>
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:stateListAnimator="@null"
+            android:text="下一页"
+            android:id="@+id/button_down"
+            android:background="@drawable/button_event_back"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"/>
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="10dp"
+            android:stateListAnimator="@null"
+            android:text="刷新"
+            android:id="@+id/button_update"
+            android:background="@drawable/button_event_back"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
 </RelativeLayout>
