--- a/app/src/main/res/layout/post/layout/create_post_layout.xml
+++ b/app/src/main/res/layout/post/layout/create_post_layout.xml
@@ -67,6 +67,7 @@
                     android:layout_height="15dp"/>
             </LinearLayout>
             <LinearLayout
+                android:layout_marginTop="6dp"
                 android:layout_marginBottom="10dp"
                 android:id="@+id/linear"
                 android:orientation="vertical"
