--- a/app/src/main/res/layout/post/layout/create_post_layout.xml
+++ b/app/src/main/res/layout/post/layout/create_post_layout.xml
@@ -97,7 +97,7 @@
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:textSize="9sp"
-                android:textColor="@color/black"
+                android:textColor="#808080"
                 android:text="转发"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
@@ -116,7 +116,7 @@
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:textSize="9sp"
-                android:textColor="@color/black"
+                android:textColor="#808080"
                 android:text="评论"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
@@ -136,7 +136,7 @@
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:textSize="9sp"
-                android:textColor="@color/black"
+                android:textColor="#808080"
                 android:text="收藏"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
