--- a/app/src/main/res/layout/activity/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity/layout/activity_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:sothree="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,16 +14,20 @@
     <androidx.viewpager.widget.ViewPager
         android:visibility="gone"
         android:id="@+id/pager"
-        android:layout_above="@id/linear_menu"
+        android:layout_above="@id/menu_system"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-
     <LinearLayout
+        android:background="#ffffff"
         android:id="@+id/menu_system"
         android:orientation="vertical"
         android:layout_above="@id/linear_menu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+        <TextView
+            android:background="#f2f3f7"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"/>
         <TextView
             android:textColor="#808080"
             android:textSize="15sp"
