--- a/app/src/main/res/layout/view/layout/view_home_page.xml
+++ b/app/src/main/res/layout/view/layout/view_home_page.xml
@@ -12,16 +12,15 @@
         android:layout_height="180dp">
         <ImageView
             android:id="@+id/back_img"
-            android:background="#00000000"
+            android:background="@drawable/gradient_white_to_transparent"
             android:scaleType="centerCrop"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
         <ImageView
-            android:background="#00000000"
+            android:background="@drawable/gradient_white_to_transparent"
             android:id="@+id/jianbian_img"
             android:scaleType="centerCrop"
             android:layout_width="match_parent"
-            android:src="@drawable/white_jianbian"
             android:layout_height="match_parent"/>
         <TextView
             android:id="@+id/top_title"
