--- a/app/src/main/res/layout/window/layout/window_disk_menu.xml
+++ b/app/src/main/res/layout/window/layout/window_disk_menu.xml
@@ -25,7 +25,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"/>
     </RelativeLayout>
-    <TextView
+    <View
         android:background="#808080"
         android:layout_width="match_parent"
         android:layout_height="1dp"/>
