--- a/app/src/main/res/layout/window/layout/window_essay_system.xml
+++ b/app/src/main/res/layout/window/layout/window_essay_system.xml
@@ -26,7 +26,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"/>
     </RelativeLayout>
-    <TextView
+    <View
         android:id="@+id/xian"
         android:background="#808080"
         android:layout_width="match_parent"
