--- a/app/src/main/res/layout/window/layout/window_personal_information_view.xml
+++ b/app/src/main/res/layout/window/layout/window_personal_information_view.xml
@@ -24,7 +24,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"/>
     </RelativeLayout>
-    <TextView
+    <View
         android:layout_marginBottom="10dp"
         android:background="#808080"
         android:layout_width="match_parent"
