--- a/app/src/main/res/layout/window/layout/window_post_add_img_url_view.xml
+++ b/app/src/main/res/layout/window/layout/window_post_add_img_url_view.xml
@@ -25,7 +25,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"/>
     </RelativeLayout>
-    <TextView
+    <View
         android:id="@+id/xian"
         android:background="#808080"
         android:layout_width="match_parent"
