--- a/app/src/main/res/layout/activity/layout/activity_view_essay.xml
+++ b/app/src/main/res/layout/activity/layout/activity_view_essay.xml
@@ -3,33 +3,33 @@
     android:layout_width="match_parent"
     android:background="#ffffff"
     android:layout_height="match_parent">
-    <TextView
-        android:id="@+id/top_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
     <RelativeLayout
-        android:layout_below="@id/top_title"
         android:id="@+id/relati"
         android:background="#ffffff"
         android:layout_width="match_parent"
-        android:layout_height="40dp">
+        android:layout_height="wrap_content">
         <TextView
-            android:layout_centerInParent="true"
+            android:layout_centerVertical="true"
+            android:gravity="center"
             android:text="所有文章"
-            android:textSize="18sp"
+            android:textSize="15sp"
             android:textColor="@color/black"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"/>
-        <ImageView
-            android:layout_marginEnd="10dp"
-            android:layout_centerInParent="true"
-            android:layout_alignParentEnd="true"
-            android:src="@drawable/return_icon"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+        <RelativeLayout
             android:id="@+id/return_icon"
-            android:layout_width="30dp"
-            android:layout_height="30dp"/>
+            android:layout_alignParentEnd="true"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_centerInParent="true"
+                android:src="@drawable/return_icon"
+                android:layout_width="30dp"
+                android:layout_height="30dp"/>
+        </RelativeLayout>
+
     </RelativeLayout>
-    <TextView
+    <View
         android:layout_below="@id/relati"
         android:id="@+id/xian1"
         android:background="#808080"
