--- a/app/src/main/res/layout/view/layout/view_square.xml
+++ b/app/src/main/res/layout/view/layout/view_square.xml
@@ -27,11 +27,11 @@
             android:layout_width="40dp"
             android:layout_height="23dp"/>
         <TextView
-            android:layout_centerHorizontal="true"
+            android:layout_centerInParent="true"
             android:textColor="@color/black"
             android:text="时间线"
             android:id="@+id/title"
-            android:textSize="18sp"
+            android:textSize="15sp"
             android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
