--- a/app/src/main/res/layout/window/layout/window_post_add_img_url_view.xml
+++ b/app/src/main/res/layout/window/layout/window_post_add_img_url_view.xml
@@ -9,16 +9,16 @@
         android:layout_width="match_parent"
         android:layout_height="50dp">
         <TextView
-            android:layout_centerInParent="true"
-            android:text="外部链接"
-            android:textSize="18sp"
-            android:gravity="bottom"
-            android:textColor="@color/black"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <ImageView
-            android:layout_marginEnd="10dp"
             android:layout_centerVertical="true"
+            android:text="外部链接"
+            android:textSize="15sp"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"/>
+        <ImageView
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="5dp"
             android:layout_alignParentEnd="true"
             android:src="@drawable/return_icon"
             android:id="@+id/return_icon"
