--- a/app/src/main/res/layout/activity/layout/activity_disk.xml
+++ b/app/src/main/res/layout/activity/layout/activity_disk.xml
@@ -6,15 +6,30 @@
     android:background="#ffffff"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".DiskActivity">
-    <ImageView
-        android:layout_marginEnd="5dp"
-        android:layout_alignParentEnd="true"
-        android:src="@drawable/return_icon"
-        android:id="@+id/return_icon"
-        android:layout_width="30dp"
-        android:layout_height="30dp"/>
+    <RelativeLayout
+        android:id="@+id/relati"
+        android:layout_width="match_parent"
+        android:layout_height="40dp">
+        <TextView
+            android:textStyle="bold"
+            android:textSize="15sp"
+            android:textColor="@color/black"
+            android:text="网盘资源"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"/>
+        <ImageView
+            android:layout_centerVertical="true"
+            android:layout_margin="5dp"
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/return_icon"
+            android:id="@+id/return_icon"
+            android:layout_width="30dp"
+            android:layout_height="30dp"/>
+    </RelativeLayout>
+
     <View
-        android:layout_below="@id/return_icon"
+        android:layout_below="@id/relati"
         android:id="@id/xian1"
         android:background="#808080"
         android:layout_width="match_parent"
