--- a/app/src/main/res/layout/activity/layout/activity_view_collection.xml
+++ b/app/src/main/res/layout/activity/layout/activity_view_collection.xml
@@ -9,24 +9,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:layout_centerVertical="true"
             android:gravity="center"
             android:text="所有收藏"
             android:textSize="15sp"
             android:textColor="@color/black"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-        <RelativeLayout
+            android:layout_height="40dp"/>
+        <ImageView
             android:id="@+id/return_icon"
+            android:layout_centerVertical="true"
             android:layout_alignParentEnd="true"
-            android:layout_width="40dp"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:layout_centerInParent="true"
-                android:src="@drawable/return_icon"
-                android:layout_width="30dp"
-                android:layout_height="30dp"/>
-        </RelativeLayout>
+            android:layout_marginEnd="5dp"
+            android:src="@drawable/return_icon"
+            android:layout_width="30dp"
+            android:layout_height="30dp"/>
     </RelativeLayout>
     <View
         android:layout_below="@id/relati"
