--- a/app/src/main/res/layout/view/layout/view_hot.xml
+++ b/app/src/main/res/layout/view/layout/view_hot.xml
@@ -9,13 +9,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <TextView
+        android:textStyle="bold"
         android:id="@+id/title_txt"
         android:textSize="15sp"
         android:gravity="center"
         android:textColor="@color/black"
         android:text="头条热榜"
         android:layout_width="match_parent"
-        android:layout_height="30dp"/>
+        android:layout_height="40dp"/>
     <View
         android:id="@+id/xian1"
         android:background="#808080"
