--- a/app/src/main/res/layout/post/layout/create_post_layout.xml
+++ b/app/src/main/res/layout/post/layout/create_post_layout.xml
@@ -2,7 +2,7 @@
 <fun.android.federal_square.view.Post_View xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:background="#00000000"
+    android:background="#ffffff"
     android:paddingStart="10dp"
     android:paddingEnd="10dp"
     android:paddingTop="10dp"
