--- a/app/src/main/res/layout/view/layout/view_home_essay.xml
+++ b/app/src/main/res/layout/view/layout/view_home_essay.xml
@@ -2,6 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:background="#f2f3f7"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
