--- a/app/src/main/res/layout/view/layout/view_hot.xml
+++ b/app/src/main/res/layout/view/layout/view_hot.xml
@@ -2,13 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:background="@color/white"
+    android:background="#00000000"
     android:layout_height="match_parent">
     <TextView
+        android:background="#ffffff"
         android:id="@+id/top_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <TextView
+        android:background="#ffffff"
         android:textStyle="bold"
         android:id="@+id/title_txt"
         android:textSize="15sp"
@@ -23,18 +25,21 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"/>
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:background="#00000000"
         android:id="@+id/swiperefee"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <ScrollView
+            android:background="#00000000"
             android:id="@+id/scrollView"
             android:overScrollMode="never"
             android:scrollbars="none"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <LinearLayout
-                android:paddingBottom="100dp"
+                android:background="#00000000"
+                android:paddingBottom="90dp"
                 android:id="@+id/linear"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
