--- a/app/src/main/res/layout/view/layout/view_main_pager.xml
+++ b/app/src/main/res/layout/view/layout/view_main_pager.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="#ffffff"
+    android:background="#f2f3f7"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <androidx.viewpager.widget.ViewPager
@@ -85,7 +85,7 @@
         </LinearLayout>
     </LinearLayout>
     <LinearLayout
-        android:background="#00000000"
+        android:background="#ffffff"
         android:padding="10dp"
         android:layout_alignParentBottom="true"
         android:id="@+id/linear_menu"
