--- a/app/src/main/res/layout/view/layout/view_square.xml
+++ b/app/src/main/res/layout/view/layout/view_square.xml
@@ -5,6 +5,7 @@
     android:background="#00000000"
     android:layout_height="match_parent">
     <TextView
+        android:background="#ffffff"
         android:id="@+id/top_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
@@ -70,7 +71,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <LinearLayout
-                android:paddingBottom="100dp"
+                android:paddingBottom="90dp"
                 android:background="#00000000"
                 android:id="@+id/linear"
                 android:orientation="vertical"
